# ml-weather-forecasting

./: .gitignore  README.md  pyproject.toml
weather_forecasting/: data_download.py  data_preprocessing.py  evaluate_model.py  plots.py  train_model.py
weather_forecasting/data/: download.py
weather_forecasting/rainfall/: baseline.py  dense.py  load_data.py  recurrent.py  recurrent_dropout.py  settings.py  stacked_recurrent.py
weather_forecasting/temperature/: baseline.py  dense.py  load_data.py  plots.py  recurrent.py  recurrent_dropout.py  settings.py  stacked_recurrent.py
weather_forecasting/wind/: baseline.py  dense.py  evaluate_model.py  load_data.py  recurrent.py  recurrent_dropout.py  settings.py  stacked_recurrent.py
